<resources>
    <string name="app_name">SherlockApp</string>
    <string name="search_title">Search</string>
    <string name="upload_title">Upload</string>
    <string name="add_person">add person</string>
    <string name="edit_name_hint">Input name</string>
    <string name="txt_age">Age (Required) :</string>
    <string name="txt_height">Height (Required) :</string>
    <string name="hint_edt_age">Input Age</string>
    <string name="hint_edt_height">Input Height</string>
    <string name="txt_gender">Gender (Required) :</string>
    <string name="rdbt_txt_male">Male</string>
    <string name="rdbt_txt_female">Female</string>
    <string name="txt_hair_color">Hair colour (Optinal) :</string>
    <string name="hint_edt_hair_colour">Input Hair Colour</string>
    <string name="txt_address">Address (Optional) :</string>
    <string name="hint_edt_address">Input Address</string>
    <string name="txt_additional_comment">Additional Comment (Optional) :</string>
    <string name="btn_txt_save">Save</string>
    <string name="btn_txt_return">Return</string>
    <string name="title_dialog_choose_image">Choose Image Source</string>
    <string name="cancel">Cancel</string>
    <string name="select_picture">Select Image</string>
    <string name="hint_edt_comment">Input Additional Comment</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="txt_no_movement">No movement for this person</string>
    <string name="mn_title_add_movement">Add Movement</string>
    <string name="txt_movement_note">Movement Note (Required) :</string>
    <string name="confirm_turn_gps">GPS is not enable. You want to enable GPS</string>
    <string name="turn_gps">Enable</string>


    <string-array name="chooses_image">
        <item>Pick from Gallery</item>
        <item>Take a Photo</item>
    </string-array>
    <string name="API_KEY2">AIzaSyBtW-Sv9HsNkPzCucI-gt93wV7Topx6wXc</string>
    <string name="API_KEY">AIzaSyB_B7ZCtmB_ipR2zbA0LLDXvqB8e2bwLAc</string>
    <string name="txt_place_nearby">Place nearby</string>
    <string name="edt_hint_location">Input location</string>
    <string name="edt_hint_movement_note">Input Movement Note</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
