<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.startup.threecat.sherlock.activity.AddPersonActivity">

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgAddPerson"
                android:elevation="4dp"
                android:src="@drawable/default_icon_add"
                android:layout_marginTop="8dp"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <android.support.design.widget.TextInputLayout

                android:layout_marginLeft="16dp"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtInputName"
                    android:maxLines="1"
                    android:textColorHint="@color/grey_300"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:hint="@string/edit_name_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/txt_age"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/txt_height"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtInputAge"
                android:hint="@string/hint_edt_age"
                android:inputType="number"
                android:layout_weight="1"
                android:maxLines="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtInputHeight"
                android:hint="@string/hint_edt_height"
                android:inputType="number"
                android:layout_weight="1"
                android:maxLines="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <TextView
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:text="@string/txt_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbtMale"
                android:checked="true"
                android:layout_weight="1"
                android:text="@string/rdbt_txt_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

           <RadioButton
               android:id="@+id/rbtFemale"
               android:layout_weight="1"
               android:text="@string/rdbt_txt_female"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
        </RadioGroup>
        <TextView
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:text="@string/txt_hair_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtInputHairColor"
            android:maxLines="1"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_edt_hair_colour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:text="@string/txt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtAddress"
            android:maxLines="1"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:text="@string/txt_additional_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtAdditionalComment"
            android:maxLines="1"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_edt_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSave"
                android:layout_weight="1"
                android:text="@string/btn_txt_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnReturn"
                android:layout_weight="1"
                android:text="@string/btn_txt_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
